...
          <Paragraph>{item.overview}</Paragraph>
        </Card.Content>
        <Card.Actions
          style={{flexDirection: 'column', alignItems: 'flex-start'}}>
          <Button
            mode="outlined"
            testID="WookieMoviesRemoveMovieToFavouritesFromFavouritescreen"
            onPress={() => removeMovieFromFavouritesAction(item.id)}>
            Remove From Favourites
          </Button>
        </Card.Actions>
      </Card>
    );
...
          data={favourites.results}
          renderItem={item => <FavouriteMovieCard item={item.item} />}
          keyExtractor={item => item.id}
        />
      ) : (
        <View style={{flex: 1, justifyContent: 'center', alignItems: 'center'}}>
          <Text testID='WookieMoviesFavouritesOpeningText'>Add a movie to your favourites</Text>
        </View>
      )}
    </View>
  );
};

...
